# CPP-Courseworks

./: README.md
a-virtual-solar-system/: CMakeLists.txt  README.md
a-virtual-solar-system/app/: main.cpp
a-virtual-solar-system/include/: particle.hpp
a-virtual-solar-system/src/: particle.cpp
a-virtual-solar-system/test/: test.cpp
game-of-life/: README.md
game-of-life/src/app/: CMakeLists.txt  gol_simulator.cpp
game-of-life/src/lib/: CMakeLists.txt  golAction.cpp  golAction.h  golInitCells.cpp  golInitCells.h
game-of-life/test/: CMakeLists.txt  golTests.cpp
game-of-life/test/data/testfiles/: alldead.txt  edge.txt  invalid.txt  uneven_cols.txt  uneven_rows.txt
game-of-life/test/data/testrules/: AllRules.txt  AllRulesResult.txt  RulesOneTwo.txt  RulesOneTwoResult.txt  RulesTwoOne.txt  RulesTwoOneResult.txt
